# airline-mgmt-qwen

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.backend  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py  openapi.yaml
backend/app/api/: __init__.py  router.py
backend/app/core/: audit.py  auth.py  config.py  logging_config.py  security.py
backend/app/db/: __init__.py
backend/app/models/: audit.py
backend/app/services/: __init__.py
backend/app/tests/: conftest.py  test_audit.py  test_auth.py  test_auth_extra.py
backend/app/utils/: __init__.py  audit.py
backend/tests/: conftest.py  test_audit.py  test_health.py  test_security.py
docs/: process-feedback.md  project-status.md  risk-list.md  roadmap.md  traceability.md  vision.md
docs/changes/T-004/: plan.md
docs/changes/T-006/: plan.md
docs/explorations/T-004/: architecture-notebook.md
docs/explorations/T-004/adrs/: adr-0001-tech-stack.md  adr-0002-data-model.md  adr-0003-regulation-engine.md  adr-0004-realtime.md  adr-0005-audit-logging.md  adr-0006-event-backbone.md
docs/use-cases/: catalog.md  uc-cm-01-crew-roster.md  uc-fo-01-flight-plan.md
frontend/: Dockerfile  Dockerfile.frontend  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/tests/: App.test.tsx  mocks.tsx  setup.ts
